--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -15,3 +15,16 @@ img{
     margin: 0 auto;
     padding: 0 16px;
 }
+
+h2{
+    text-transform: uppercase;
+}
+
+.section-type{
+    padding: 20px 0;
+}
+
+a{
+    text-decoration: none;
+    color: $a-col;
+}
