--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -8,6 +8,7 @@ body{
 img{
     max-width: 100%;
     height: auto;
+    display: block;
 }
 
 .container{
@@ -27,4 +28,10 @@ h2{
 a{
     text-decoration: none;
     color: $a-col;
+}
+
+li{
+    list-style: none;
+    margin-right: 10px;
+    margin-top: 40px;
 }
