--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,4 +5,14 @@
 @import 'partials/utilities';
 
 // Sections
+
+@import 'partials/header';
+@import 'partials/product';
 @import 'partials/boxes';
+@import 'partials/footer';
+
+// Pages 
+
+@import 'partials/news';
+@import 'partials/product-page';
+
